--- a/sass/molecules/mixins.sass
+++ b/sass/molecules/mixins.sass
@@ -24,15 +24,15 @@ $linkedin: #007bb6
 $github: #131313
 $googleplus: #dd4b39
 $behance: #1769ff
+$instagram: #e95950
 
 /* ======== Font */
 $light: 300
 $regular: 400
 $bold: 700
 
-$celular: max-width 564px
-$tablet2: max-width 568px
-$tablet: max-width 768px
+$celular: max-width 768px
+$tablet: max-width 992px
 
 =flexbox
   display: -webkit-box
