--- a/sass/organisms/_body.sass
+++ b/sass/organisms/_body.sass
@@ -1,3 +1,36 @@
 html, body, .capa
     height: 100%
+    font-family: Helvetica,Arial,sans-serif;
+    z-index: 999
+    
+    h1
+        +font-size(150px)
+        font-weight: 900
+        letter-spacing: -0.05em
+        margin-bottom: 50px
+        
+    h2
+        +font-size(90px)
+        font-weight: 700
+        letter-spacing: -0.04em
+        
+    h3
+        +font-size(70px)
+        font-weight: 700
+        letter-spacing: -0.04em    
+        
+    #servicos h2, #servicos h3
+        color: #7c25f8
+    
+    #recursos h3
+        color: #9bf0e1
+        
+    #rodape h4
+        color: #919496
+        +font-size(25px)
+        font-weight: 700;
+        text-transform: uppercase;
+        
+    
+    
         
