--- a/sass/plugins.sass
+++ b/sass/plugins.sass
@@ -3,5 +3,8 @@
 @import ../bower_components/bootstrap-sass/assets/stylesheets/bootstrap
     
 @import ../bower_components/font-awesome/scss/font-awesome
+
+@import molecules/mixins    
     
 @import organisms/body
+    
